--- a/about.html
+++ b/about.html
@@ -366,9 +366,7 @@ Author URL: http://w3layouts.com
         </div>
       </div>
       <div class="midd-footer-28 align-center py-4 mt-5">
-<p class="copy-footer-28 text-center"> &copy; 2020 Photoflash. All Rights Reserved. Design by <a href="https://w3layouts.com/"
-            target="_blank">
-            W3layouts</a></p>
+<p class="copy-footer-28 text-center"> &copy; 2022 photoflash. All Rights Reserved. Design by shaik javeed ahamad</p>
       </div>
     </div>
 
